--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,5 +54,5 @@ jobs:
           lftp -c "
           set sftp:auto-confirm yes;
           open -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST;
-          mirror -R --delete build/ /
+          mirror -R --delete dist/ /
           "
