--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -26,7 +29,7 @@ jobs:
         run: yarn build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build
           path: dist/
@@ -38,7 +41,7 @@ jobs:
 
     steps:
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build
 
@@ -50,9 +53,10 @@ jobs:
           SFTP_HOST: ${{ secrets.DEPLOY_FTP_HOST }}
           SFTP_USER: ${{ secrets.DEPLOY_FTP_USERNAME }}
           SFTP_PASSWORD: ${{ secrets.DEPLOY_FTP_PASSWORD }}
+          SFTP_PORT: ${{ secrets.DEPLOY_FTP_PORT }}
         run: |
           lftp -c "
           set sftp:auto-confirm yes;
-          open -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST;
-          mirror -R --delete dist/ /
+          open -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST:$SFTP_PORT;
+          mirror -R --delete ./ /
           "
