--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,5 +59,5 @@ jobs:
           lftp -c "
           set ssl:verify-certificate no;
           open -u $SFTP_USER,$SFTP_PASSWORD ftp://$SFTP_HOST;
-          mirror -R --delete ./ /
+          mirror -R --delete dist/ /
           "
