--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build
+          path: dist/
 
       - name: Install lftp
         run: sudo apt-get update && sudo apt-get install -y lftp
