--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,8 @@ jobs:
           name: build
           path: dist/
 
-      - name: Install lftp
-        run: sudo apt-get update && sudo apt-get install -y lftp
+      - name: Install lftp, ca-certificates
+        run: sudo apt-get update && sudo apt-get install -y lftp ca-certificates
 
       - name: Deploy
         env:
@@ -61,7 +61,6 @@ jobs:
           set net:timeout 5;
           set net:max-retries 2;
           set net:reconnect-interval-base 5;
-          set ssl:verify-certificate no;
           open -u $USER,$PASSWORD $HOST;
           mirror dist / -Renv --parallel=10
           "
