Add automatic deploy (#1)
* add automatic deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: yarn build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build
           path: dist/
@@ -35,24 +35,30 @@ jobs:
     name: Deploy to SFTP
     runs-on: ubuntu-latest
     needs: build
+    environment: production
 
     steps:
       - name: Download build artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: build
+          path: dist/
 
       - name: Install lftp
         run: sudo apt-get update && sudo apt-get install -y lftp
 
-      - name: Deploy via SFTP
+      - name: Deploy
         env:
-          SFTP_HOST: ${{ secrets.DEPLOY_FTP_HOST }}
-          SFTP_USER: ${{ secrets.DEPLOY_FTP_USERNAME }}
-          SFTP_PASSWORD: ${{ secrets.DEPLOY_FTP_PASSWORD }}
+          HOST: ${{ secrets.DEPLOY_FTP_HOST }}
+          USER: ${{ secrets.DEPLOY_FTP_USERNAME }}
+          PASSWORD: ${{ secrets.DEPLOY_FTP_PASSWORD }}
+          PORT: ${{ secrets.DEPLOY_FTP_PORT }}
         run: |
-          lftp -c "
-          set sftp:auto-confirm yes;
-          open -u $SFTP_USER,$SFTP_PASSWORD sftp://$SFTP_HOST;
-          mirror -R --delete dist/ /
+          lftp -vv -c "
+          set net:timeout 5;
+          set net:max-retries 2;
+          set net:reconnect-interval-base 5;
+          set ssl:verify-certificate no;
+          open -u $USER,$PASSWORD $HOST:$PORT;
+          mirror dist / -Renv --parallel=10
           "
